--- a/packages/plugin-css/test/fixtures/type-color/want.css
+++ b/packages/plugin-css/test/fixtures/type-color/want.css
@@ -3,6 +3,11 @@
  * ------------------------------------------- */
 
 :root {
+  --ds-color-alias-1: var(--ds-color-blue-6);
+  --ds-color-alias-2: var(--ds-color-alias-1);
+  --ds-color-alias-3: var(--ds-color-alias-2);
+  --ds-color-alias-4: var(--ds-color-alias-3);
+  --ds-color-alias-5: var(--ds-color-alias-4);
   --ds-color-blue-0: color(srgb 0.8666666666666667 0.9568627450980393 1);
   --ds-color-blue-1: color(srgb 0.7137254901960784 0.8901960784313725 1);
   --ds-color-blue-2: color(srgb 0.5019607843137255 0.8 1);
@@ -37,6 +42,11 @@
 
 @media (prefers-color-scheme: light) {
   :root {
+    --ds-color-alias-1: var(--ds-color-blue-6);
+    --ds-color-alias-2: var(--ds-color-alias-1);
+    --ds-color-alias-3: var(--ds-color-alias-2);
+    --ds-color-alias-4: var(--ds-color-alias-3);
+    --ds-color-alias-5: var(--ds-color-alias-4);
     --ds-color-blue-0: color(srgb 0.8666666666666667 0.9568627450980393 1);
     --ds-color-blue-1: color(srgb 0.7137254901960784 0.8901960784313725 1);
     --ds-color-blue-2: color(srgb 0.5019607843137255 0.8 1);
@@ -50,10 +60,16 @@
     --ds-color-control-border-focus: var(--ds-color-blue-7);
     --ds-color-hdr-blue: color(srgb -7.889244812986363e-15 0.5357343296597399 0.9999999999999997);
     --ds-color-text-action: var(--ds-color-blue-6);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 [data-color-theme="light"] {
+  --ds-color-alias-1: var(--ds-color-blue-6);
+  --ds-color-alias-2: var(--ds-color-alias-1);
+  --ds-color-alias-3: var(--ds-color-alias-2);
+  --ds-color-alias-4: var(--ds-color-alias-3);
+  --ds-color-alias-5: var(--ds-color-alias-4);
   --ds-color-blue-0: color(srgb 0.8666666666666667 0.9568627450980393 1);
   --ds-color-blue-1: color(srgb 0.7137254901960784 0.8901960784313725 1);
   --ds-color-blue-2: color(srgb 0.5019607843137255 0.8 1);
@@ -67,12 +83,14 @@
   --ds-color-control-border-focus: var(--ds-color-blue-7);
   --ds-color-hdr-blue: color(srgb -7.889244812986363e-15 0.5357343296597399 0.9999999999999997);
   --ds-color-text-action: var(--ds-color-blue-6);
+  --ds-color-text-hdr: var(--ds-color-hdr-blue);
 }
 
 @media (prefers-color-scheme: light) {
   @media (color-gamut: p3) {
     :root {
       --ds-color-hdr-blue: color(display-p3 0.17546628160974162 0.5202121016217128 0.9999999999999999);
+      --ds-color-text-hdr: var(--ds-color-hdr-blue);
     }
   }
 }
@@ -80,6 +98,7 @@
 @media (color-gamut: p3) {
   [data-color-theme="light"] {
     --ds-color-hdr-blue: color(display-p3 0.17546628160974162 0.5202121016217128 0.9999999999999999);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
@@ -87,6 +106,7 @@
   @media (color-gamut: rec2020) {
     :root {
       --ds-color-hdr-blue: color(rec2020 0.3209817156326149 0.47226959394393686 1.0000000000000002);
+      --ds-color-text-hdr: var(--ds-color-hdr-blue);
     }
   }
 }
@@ -94,11 +114,17 @@
 @media (color-gamut: rec2020) {
   [data-color-theme="light"] {
     --ds-color-hdr-blue: color(rec2020 0.3209817156326149 0.47226959394393686 1.0000000000000002);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --ds-color-alias-1: var(--ds-color-blue-6);
+    --ds-color-alias-2: var(--ds-color-alias-1);
+    --ds-color-alias-3: var(--ds-color-alias-2);
+    --ds-color-alias-4: var(--ds-color-alias-3);
+    --ds-color-alias-5: var(--ds-color-alias-4);
     --ds-color-blue-0: color(srgb 0.792156862745098 0.9098039215686274 1);
     --ds-color-blue-1: color(srgb 0.6470588235294118 0.8392156862745098 1);
     --ds-color-blue-2: color(srgb 0.4745098039215686 0.7529411764705882 1);
@@ -112,10 +138,16 @@
     --ds-color-control-border-focus: var(--ds-color-blue-6);
     --ds-color-hdr-blue: color(srgb 0.13748909829685632 0.5371632643751101 1.0000000000000002);
     --ds-color-text-action: var(--ds-color-blue-5);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 [data-color-theme="dark"] {
+  --ds-color-alias-1: var(--ds-color-blue-6);
+  --ds-color-alias-2: var(--ds-color-alias-1);
+  --ds-color-alias-3: var(--ds-color-alias-2);
+  --ds-color-alias-4: var(--ds-color-alias-3);
+  --ds-color-alias-5: var(--ds-color-alias-4);
   --ds-color-blue-0: color(srgb 0.792156862745098 0.9098039215686274 1);
   --ds-color-blue-1: color(srgb 0.6470588235294118 0.8392156862745098 1);
   --ds-color-blue-2: color(srgb 0.4745098039215686 0.7529411764705882 1);
@@ -129,12 +161,14 @@
   --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-hdr-blue: color(srgb 0.13748909829685632 0.5371632643751101 1.0000000000000002);
   --ds-color-text-action: var(--ds-color-blue-5);
+  --ds-color-text-hdr: var(--ds-color-hdr-blue);
 }
 
 @media (prefers-color-scheme: dark) {
   @media (color-gamut: p3) {
     :root {
       --ds-color-hdr-blue: color(display-p3 0.2389375205770652 0.5222077462959255 0.9999999999999999);
+      --ds-color-text-hdr: var(--ds-color-hdr-blue);
     }
   }
 }
@@ -142,6 +176,7 @@
 @media (color-gamut: p3) {
   [data-color-theme="dark"] {
     --ds-color-hdr-blue: color(display-p3 0.2389375205770652 0.5222077462959255 0.9999999999999999);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
@@ -149,6 +184,7 @@
   @media (color-gamut: rec2020) {
     :root {
       --ds-color-hdr-blue: color(rec2020 0.3456997065436288 0.47530781739412375 1);
+      --ds-color-text-hdr: var(--ds-color-hdr-blue);
     }
   }
 }
@@ -156,10 +192,16 @@
 @media (color-gamut: rec2020) {
   [data-color-theme="dark"] {
     --ds-color-hdr-blue: color(rec2020 0.3456997065436288 0.47530781739412375 1);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 [data-color-theme="light-colorblind"] {
+  --ds-color-alias-1: var(--ds-color-blue-6);
+  --ds-color-alias-2: var(--ds-color-alias-1);
+  --ds-color-alias-3: var(--ds-color-alias-2);
+  --ds-color-alias-4: var(--ds-color-alias-3);
+  --ds-color-alias-5: var(--ds-color-alias-4);
   --ds-color-blue-0: color(srgb 0.8666666666666667 0.9568627450980393 1);
   --ds-color-blue-1: color(srgb 0.7137254901960784 0.8901960784313725 1);
   --ds-color-blue-2: color(srgb 0.5019607843137255 0.8 1);
@@ -170,22 +212,32 @@
   --ds-color-blue-7: color(srgb 0.011764705882352941 0.23921568627450981 0.5450980392156862);
   --ds-color-blue-8: color(srgb 0.0392156862745098 0.18823529411764706 0.4117647058823529);
   --ds-color-blue-9: color(srgb 0 0.12941176470588237 0.3333333333333333);
+  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-hdr-blue: color(srgb -7.889244812986363e-15 0.5357343296597399 0.9999999999999997);
+  --ds-color-text-action: var(--ds-color-blue-5);
+  --ds-color-text-hdr: var(--ds-color-hdr-blue);
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="light-colorblind"] {
     --ds-color-hdr-blue: color(display-p3 0.17546628160974162 0.5202121016217128 0.9999999999999999);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 @media (color-gamut: rec2020) {
   [data-color-theme="light-colorblind"] {
     --ds-color-hdr-blue: color(rec2020 0.3209817156326149 0.47226959394393686 1.0000000000000002);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 [data-color-theme="light-high-contrast"] {
+  --ds-color-alias-1: var(--ds-color-blue-6);
+  --ds-color-alias-2: var(--ds-color-alias-1);
+  --ds-color-alias-3: var(--ds-color-alias-2);
+  --ds-color-alias-4: var(--ds-color-alias-3);
+  --ds-color-alias-5: var(--ds-color-alias-4);
   --ds-color-blue-0: color(srgb 0.8745098039215686 0.9686274509803922 1);
   --ds-color-blue-1: color(srgb 0.611764705882353 0.8431372549019608 1);
   --ds-color-blue-2: color(srgb 0.403921568627451 0.7019607843137254 0.9921568627450981);
@@ -196,22 +248,32 @@
   --ds-color-blue-7: color(srgb 0.00784313725490196 0.1843137254901961 0.47843137254901963);
   --ds-color-blue-8: color(srgb 0.011764705882352941 0.1450980392156863 0.38823529411764707);
   --ds-color-blue-9: color(srgb 0.00784313725490196 0.10196078431372549 0.2901960784313726);
+  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-hdr-blue: color(srgb -9.68225499775599e-15 0.35691591247017795 0.9999999999999997);
+  --ds-color-text-action: var(--ds-color-blue-5);
+  --ds-color-text-hdr: var(--ds-color-hdr-blue);
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="light-high-contrast"] {
     --ds-color-hdr-blue: color(display-p3 5.020428517354958e-15 0.3441236630982748 0.9999999999999997);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 @media (color-gamut: rec2020) {
   [data-color-theme="light-high-contrast"] {
     --ds-color-hdr-blue: color(rec2020 0.2240351080714258 0.29742790040417616 0.9973424951821133);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 [data-color-theme="dark-dimmed"] {
+  --ds-color-alias-1: var(--ds-color-blue-6);
+  --ds-color-alias-2: var(--ds-color-alias-1);
+  --ds-color-alias-3: var(--ds-color-alias-2);
+  --ds-color-alias-4: var(--ds-color-alias-3);
+  --ds-color-alias-5: var(--ds-color-alias-4);
   --ds-color-blue-0: color(srgb 0.7764705882352941 0.9019607843137255 1);
   --ds-color-blue-1: color(srgb 0.5882352941176471 0.8156862745098039 1);
   --ds-color-blue-2: color(srgb 0.4235294117647059 0.7137254901960784 1);
@@ -222,10 +284,18 @@
   --ds-color-blue-7: color(srgb 0.10588235294117647 0.29411764705882354 0.5686274509803921);
   --ds-color-blue-8: color(srgb 0.0784313725490196 0.23921568627450981 0.4745098039215686);
   --ds-color-blue-9: color(srgb 0.058823529411764705 0.17647058823529413 0.3607843137254902);
+  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-hdr-blue: oklch(0.6177 0.161 257.75);
+  --ds-color-text-action: var(--ds-color-blue-5);
+  --ds-color-text-hdr: var(--ds-color-hdr-blue);
 }
 
 [data-color-theme="dark-high-contrast"] {
+  --ds-color-alias-1: var(--ds-color-blue-6);
+  --ds-color-alias-2: var(--ds-color-alias-1);
+  --ds-color-alias-3: var(--ds-color-alias-2);
+  --ds-color-alias-4: var(--ds-color-alias-3);
+  --ds-color-alias-5: var(--ds-color-alias-4);
   --ds-color-blue-0: color(srgb 0.792156862745098 0.9176470588235294 1);
   --ds-color-blue-1: color(srgb 0.6784313725490196 0.8627450980392157 1);
   --ds-color-blue-2: color(srgb 0.5686274509803921 0.796078431372549 1);
@@ -236,22 +306,32 @@
   --ds-color-blue-7: color(srgb 0.14901960784313725 0.4470588235294118 0.9529411764705882);
   --ds-color-blue-8: color(srgb 0.11764705882352941 0.3764705882352941 0.8352941176470589);
   --ds-color-blue-9: color(srgb 0.09803921568627451 0.30980392156862746 0.6941176470588235);
+  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-hdr-blue: color(srgb 0.20518218487690842 0.6263569893601698 0.9999999999999994);
+  --ds-color-text-action: var(--ds-color-blue-5);
+  --ds-color-text-hdr: var(--ds-color-hdr-blue);
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="dark-high-contrast"] {
     --ds-color-hdr-blue: color(display-p3 0.33316083239768096 0.6177929334477471 0.9999999999999999);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 @media (color-gamut: rec2020) {
   [data-color-theme="dark-high-contrast"] {
     --ds-color-hdr-blue: color(rec2020 0.4150037103011196 0.5744758783087993 1);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 [data-color-theme="dark-colorblind"] {
+  --ds-color-alias-1: var(--ds-color-blue-6);
+  --ds-color-alias-2: var(--ds-color-alias-1);
+  --ds-color-alias-3: var(--ds-color-alias-2);
+  --ds-color-alias-4: var(--ds-color-alias-3);
+  --ds-color-alias-5: var(--ds-color-alias-4);
   --ds-color-blue-0: color(srgb 0.792156862745098 0.9098039215686274 1);
   --ds-color-blue-1: color(srgb 0.6470588235294118 0.8392156862745098 1);
   --ds-color-blue-2: color(srgb 0.4745098039215686 0.7529411764705882 1);
@@ -262,18 +342,23 @@
   --ds-color-blue-7: color(srgb 0.050980392156862744 0.2549019607843137 0.615686274509804);
   --ds-color-blue-8: color(srgb 0.047058823529411764 0.17647058823529413 0.4196078431372549);
   --ds-color-blue-9: color(srgb 0.0196078431372549 0.11372549019607843 0.30196078431372547);
+  --ds-color-control-border-focus: var(--ds-color-blue-6);
   --ds-color-hdr-blue: color(srgb 0.13748909829685632 0.5371632643751101 1.0000000000000002);
+  --ds-color-text-action: var(--ds-color-blue-5);
+  --ds-color-text-hdr: var(--ds-color-hdr-blue);
 }
 
 @media (color-gamut: p3) {
   [data-color-theme="dark-colorblind"] {
     --ds-color-hdr-blue: color(display-p3 0.2389375205770652 0.5222077462959255 0.9999999999999999);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
 @media (color-gamut: rec2020) {
   [data-color-theme="dark-colorblind"] {
     --ds-color-hdr-blue: color(rec2020 0.3456997065436288 0.47530781739412375 1);
+    --ds-color-text-hdr: var(--ds-color-hdr-blue);
   }
 }
 
