--- a/packages/plugin-css/test/fixtures/type-dimension/want.css
+++ b/packages/plugin-css/test/fixtures/type-dimension/want.css
@@ -6,6 +6,8 @@
   --ds-control-default-size: var(--ds-space-600);
   --ds-control-small-size: var(--ds-space-500);
   --ds-space-000: 0.125rem;
+  --ds-space-2x-large: 3rem;
+  --ds-space-3x-large: 4rem;
   --ds-space-100: 0.25rem;
   --ds-space-200: 0.5rem;
   --ds-space-300: 0.75rem;
@@ -17,12 +19,12 @@
   --ds-space-900: 4rem;
   --ds-space-large: 1.5rem;
   --ds-space-x-large: 2rem;
-  --ds-space-2x-large: 3rem;
-  --ds-space-3x-large: 4rem;
 }
 
 @media (width >= 600px) {
   :root {
+    --ds-control-default-size: var(--ds-space-600);
+    --ds-control-small-size: var(--ds-space-500);
     --ds-space-000: 0.25rem;
     --ds-space-100: 0.375rem;
     --ds-space-200: 0.75rem;
