--- a/packages/plugin-css/test/fixtures/type-typography/want.css
+++ b/packages/plugin-css/test/fixtures/type-typography/want.css
@@ -39,7 +39,11 @@
 
 @media (width >= 600px) {
   :root {
+    --ds-typography-body-font-family: "IBM Plex Sans", system-ui, sans-serif;
     --ds-typography-body-font-size: 14px;
+    --ds-typography-body-font-variation-settings: "wght" 100, "opsz" 100, "wdth" 50;
+    --ds-typography-body-font-weight: 400;
+    --ds-typography-body-line-height: 1.5;
     --ds-typography-label-font-family: var(--ds-typography-subheading-font-family);
     --ds-typography-label-font-size: var(--ds-typography-subheading-font-size);
     --ds-typography-label-font-variation-settings: var(--ds-typography-subheading-font-variation-settings);
