--- a/packages/tiles/src/SubtleInput/SubtleInput.css
+++ b/packages/tiles/src/SubtleInput/SubtleInput.css
@@ -40,6 +40,7 @@
   outline: none;
   padding: 0;
   text-indent: var(--tz-space-200);
+  field-sizing: content;
 
   &[type="number"] {
     text-align: right;
