--- a/packages/token-lab/src/components/EditableColorToken/EditableColorToken.module.css
+++ b/packages/token-lab/src/components/EditableColorToken/EditableColorToken.module.css
@@ -1,25 +1,151 @@
-.btn {
-  background: none;
-  border: 1px solid var(--tz-border-3);
-  border-radius: 0;
-  font-size: inherit;
-  font-weight: inherit;
+.container {
+  display: grid;
+  grid-auto-flow: column;
+  width: 28rem;
+  height: 1.5rem;
+  gap: 1rem;
+  grid-template-columns: 3fr 20fr 5fr;
+  contain: inline-size;
+  place-items: center;
+}
+
+.swatch {
+  background: var(--color);
+  border: 1px solid oklch(0 0 0 / 20%);
+  border-radius: 0.25rem;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 
   &:hover {
     border-color: var(--tz-color-border-2);
   }
 
   &:focus-visible {
-    outline: 2px solid var(--tz-color-focus);
+    outline: 2px solid var(--tz-color-base-lime-800);
     outline-offset: 2px;
   }
 }
 
-.swatch {
-  background: var(--color);
+.popover {
+  display: grid;
+  background: var(--tz-color-bg-1);
+  padding: 1rem;
+  filter: drop-shadow(4px 8px 8px oklch(0.1 0 0 / 0.5));
+  place-items: center;
+  border-radius: 1rem;
+  transition-property: opacity, translate;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+}
+
+.popover::after {
+  content: '';
+  display: block;
+  background-color: var(--tz-color-bg-1);
+  height: 1rem;
+  width: 1rem;
+}
+
+.popover[data-side=bottom] {
+  padding-top: 0; /* the triangle is going to do double duty as the top padding */
+  @starting-style {
+    opacity: 0;
+    translate: 0 2rem;
+  }
+  &::after {
+    grid-row: 1;
+    translate: 0 -8px;
+    mask: conic-gradient(
+      from 135deg at top,
+      black 90deg,
+      transparent 91deg,
+      transparent 359deg,
+      black 360deg
+    ) top / 100% 50% no-repeat;
+  }
+}
+
+.popover[data-side=top] {
+  padding-bottom: 0;
+  @starting-style {
+    opacity: 0;
+    translate: 0 -2rem;
+  }
+  &::after {
+    grid-row: 2;
+    translate: 0 8px;
+    mask: conic-gradient(
+      from -45deg at bottom,
+      black 90deg,
+      transparent 91deg,
+      transparent 359deg,
+      black 360deg
+    ) bottom / 100% 50% no-repeat;
+  }
+}
+
+.channels {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(4, 1fr);
+  outline: var(--tz-border-3);
   border-radius: 0.25rem;
-  cursor: pointer;
-  height: 2rem;
-  width: 3rem;
+  height: 100%;
+  contain: inline-size;
+}
+
+.colorSpaceDropdown {
+  font-family: var(--tz-font-mono);
+  color: var(--tz-color-text-1);
+  height: 100%;
+  contain: size paint;
+  border-radius: initial;
+  display: grid;
+  padding: 0 0.5rem;
+  justify-content: stretch;
+
+  & > :nth-child(1) {
+    grid-area: 1/1;
+    justify-self: start;
+  }
+  & > :nth-child(2) {
+    grid-area: 1/1;
+    justify-self: end;
+  }
+  & :global(.tz-select-item-inner) {
+    display: block;
+  }
+  & :global(.tz-select-item-icon) {
+    display: none;
+  }
+  &:hover, &:focus-visible {
+    outline-color: transparent;
+    background: var(--tz-color-bg-2);
+  }
+}
+
+.colorSpaceDropdownItem {
+  font-family: var(--tz-font-mono);
+}
+
+.channel {
+  display: inline-block;
+  padding: 0 0.5rem;
+  font-family: var(--tz-font-mono);
+  border-left: var(--tz-border-3);
+  color: var(--tz-color-text-1);
+  align-content: center;
+}
+
+.alpha {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  padding: 0 0.5rem;
+  font-family: var(--tz-font-mono);
+  outline: var(--tz-border-3);
+  border-radius: 0.25rem;
+  align-content: center;
 }
