--- a/packages/plugin-sass/assets/sass/token_lib.scss
+++ b/packages/plugin-sass/assets/sass/token_lib.scss
@@ -9,7 +9,7 @@
     @error 'This is a typography mixin. Use `@include typography("#{tokenId}")` instead.';
   }
 
-  @return map.get($token);
+  @return $token;
 }
 
 @mixin typography($tokenName) {
