Add hosting badge

--- a/www/src/components/docs-header-nav.astro
+++ b/www/src/components/docs-header-nav.astro
@@ -1,7 +1,7 @@
 ---
 import { DiscordLogo, GitHubLogo } from '@terrazzo/icons';
-import DocsSearch from './SearchBox.tsx';
-import ThemeSwitcher from './ThemeSwitcher.tsx';
+import DocsSearch from './SearchBox.js';
+import ThemeSwitcher from './ThemeSwitcher.js';
 ---
 
 <header class="header-nav">
