--- a/www/src/layouts/default.astro
+++ b/www/src/layouts/default.astro
@@ -6,7 +6,7 @@ import MainNav from '../components/main-nav.astro';
 const { title, description, socialImage } = Astro.props;
 ---
 
-<html>
+<html lang="en">
   <head>
     <HeadMeta
       title={title}
