--- a/www/src/layouts/docs.astro
+++ b/www/src/layouts/docs.astro
@@ -7,7 +7,7 @@ import '../styles/docs.css';
 const { frontmatter } = Astro.props;
 ---
 
-<html>
+<html lang="en">
   <head>
     <HeadMeta title={frontmatter.title} description={frontmatter.description} />
     <script is:inline>
